--- a/.drone.yml
+++ b/.drone.yml
@@ -5,6 +5,14 @@ name: default
 steps:
 - name: greeting
   image: alpine
+  volumes:
+  - name: cache
+    path: /var/git_local
   commands:
-  - echo hello
-  - echo world
+  - echo hello > /var/git_local/test.txt
+  - echo world >> /var/git_local/test.txt
+
+volumes:
+- name: cache
+  host:
+    path: /tmp/cache
