--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ steps:
   - name: cache
     path: /var/git_local
   commands:
-  - ls
+  - cat test.txt
   - echo hello > /var/git_local/test.txt
   - echo world >> /var/git_local/test.txt
 
