--- a/.drone.yml
+++ b/.drone.yml
@@ -15,6 +15,7 @@ steps:
   - cat test.txt
   - echo hello > /var/git_local/test.txt
   - echo world >> /var/git_local/test.txt
+  - sleep 10
 
 volumes:
 - name: cache
