--- a/.drone.yml
+++ b/.drone.yml
@@ -43,6 +43,7 @@ steps:
 - name: ssh
   commands:
   - echo ${DRONE_COMMIT} > /home/ec2-user/test.txt
+  - echo "hi" >> /home/ec2-user/test.txt
 
 ---
 kind: pipeline
