--- a/.drone.yml
+++ b/.drone.yml
@@ -44,7 +44,7 @@ steps:
   commands:
   - KUBECONFIG=/home/ec2-user/.kube/config
   - REPO=427794181662.dkr.ecr.ap-northeast-1.amazonaws.com/ruby
-  - kubectl --kubeconfig ${KUBECONFIG} set image deploy ruby ruby=REPO:${DRONE_COMMIT}
+  - kubectl --kubeconfig $KUBECONFIG set image deploy ruby ruby=$REPO:${DRONE_COMMIT}
 
 ---
 kind: pipeline
