--- a/.drone.yml
+++ b/.drone.yml
@@ -45,7 +45,8 @@ steps:
   - KUBECONFIG=/home/ec2-user/.kube/config
   - REPO=427794181662.dkr.ecr.ap-northeast-1.amazonaws.com/ruby
   - kubectl --kubeconfig $KUBECONFIG set image deploy ruby ruby=$REPO:${DRONE_COMMIT}
-
+depends_on:
+  - default
 ---
 kind: pipeline
 type: docker
@@ -59,7 +60,7 @@ steps:
     secret_key:
       from_secret: secret_key
     region: ap-northeast-1
-    repo: staging
+    repo: ruby
     registry: 427794181662.dkr.ecr.ap-northeast-1.amazonaws.com
     tags:
     - latest
